redirect to /health with spaces adjusted

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>maaaaa</h1>
-    <button id="getHealth" onclick="getData()">Click me</button>
-    <div id="mydiv">   </div>
-
+    
+    <button onclick="getData()">Click me</button>
+    <input id="city"placeholder='Pick a city'>
+    <input id="country"placeholder='Pick a country'>
     <script src="script.js"></script>
 </body>
 </html>
