display results in the browser upon click

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Health System Forecast</title>
 </head>
 <body>
     <h1>maaaaa</h1>
@@ -12,6 +12,10 @@
     <button onclick="getData()">Click me</button>
     <input id="city"placeholder='Pick a city'>
     <input id="country"placeholder='Pick a country'>
+
+
+    <div id="result"> </div>
+
     <script src="script.js"></script>
 </body>
 </html>
